feat: Added example with values_list

--- a/sample_project/templates/default.html
+++ b/sample_project/templates/default.html
@@ -10,7 +10,7 @@
 		<div class="pagination top">{% block pagination_top %}{% pagination %}{% endblock %}</div>
 		<ul class="items">
 			{% for object in object_list %}
-				<li>{{ object }}</li>
+				<li>{% if object.name %}{{ object.name }}{% else %}{{ object }}{% endif %}</li>
 			{% endfor %}
 		</ul>
 		<div class="pagination bottom">{% block pagination_bottom %}{% pagination %}{% endblock %}</div>
