--- a/sample_project/templates/home.html
+++ b/sample_project/templates/home.html
@@ -9,5 +9,6 @@
 		<li><a href="{% url "large_paginator" page=1 %}">Large paginator</a></li>
 		<li><a href="{% url "custom_template_paginator" page=1 %}">Custom template paginator</a></li>
 		<li><a href="{% url "cursor" page=1 %}">Cursor pagination</a></li>
+		<li><a href="{% url "cursor_values" page=1 %}">Cursor pagination with values</a></li>
 	</ul>
 {% endblock %}
